--- a/VirtualTourist_v1/Base.lproj/Main.storyboard
+++ b/VirtualTourist_v1/Base.lproj/Main.storyboard
@@ -149,7 +149,9 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="on9-JW-FJ9">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <items>
-                                    <barButtonItem title="Item" id="hmw-Qb-Kaz"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="nET-tn-U5t"/>
+                                    <barButtonItem title="New Collection" id="hmw-Qb-Kaz"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="W5k-uw-xzN"/>
                                 </items>
                             </toolbar>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hd1-yl-DYN">
@@ -229,6 +231,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Details" id="lE3-Fe-a14"/>
                     <connections>
+                        <outlet property="barButton" destination="hmw-Qb-Kaz" id="WTo-Ry-ya7"/>
                         <outlet property="collectionView" destination="1jw-Md-62D" id="VY7-Yb-8XH"/>
                         <outlet property="mapView" destination="grR-Dy-TZZ" id="qX5-DC-PaX"/>
                     </connections>
